--- a/src/assets/stylus/base.styl
+++ b/src/assets/stylus/base.styl
@@ -2,8 +2,35 @@
 
 body, html
   line-height: 1
-  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
-  user-select: none
+  font-family: 'PingFangSC', 'Helvetica-Light', arial, sans-serif
   -webkit-tap-highlight-color: transparent
-  background: $color-background
-  color: $color-text
+  font-size: $font-size-small
+  background: $color-background-white
+  color: $color-text-black
+  -webkit-touch-callout: none;  /*系统默认菜单被禁用*/
+  -webkit-user-select: none; /*webkit浏览器*/
+  -khtml-user-select: none; /*早期浏览器*/
+  -moz-user-select: none;/*火狐*/
+  -ms-user-select: none; /*IE10*/
+  user-select: none;
+
+body
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
+
+img[lazy=loading]
+  background: #f0f0f0
+  width: 100%
+  height: 100%
+img[lazy=error]
+  background: #f0f0f0
+  width: 100%
+  height: 100%
+img[lazy=loaded]
+  animation: fade .5s
+
+@keyframes fade
+  0%
+    opacity: 0
+  100%
+    opacity: 1
