--- a/src/assets/stylus/mixin.styl
+++ b/src/assets/stylus/mixin.styl
@@ -1,14 +1,18 @@
-// 背景图片
-bg-image($url)
-  background-image: url($url + "@2x.png")
-  @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
-    background-image: url($url + "@3x.png")
 
 // 不换行
 no-wrap()
   text-overflow: ellipsis
   overflow: hidden
   white-space: nowrap
+
+// 两行省略号
+line-clamp-2()
+  text-overflow:ellipsis
+  overflow:hidden
+  display:-webkit-box
+  -webkit-line-clamp:2
+  -webkit-box-orient:vertical
+  word-break: break-all
 
 // 扩展点击区域
 extend-click()
@@ -20,3 +24,16 @@ extend-click()
     left: -10px
     right: -10px
     bottom: -10px
+
+// 点击区域手势
+cursor-hover()
+  cursor: pointer
+
+// a标签四状态颜色
+a-hover($color)
+  &:hover
+  &:active
+  &:link
+  &:visited
+    color: $color
+    text-decoration: none
