--- a/src/assets/stylus/reset.styl
+++ b/src/assets/stylus/reset.styl
@@ -2,6 +2,8 @@
  * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
  * http://cssreset.com
  */
+@import "variable.styl"
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,6 +23,7 @@ time, mark, audio, video, input
   font-size: 100%
   font-weight: normal
   vertical-align: baseline
+  box-sizing: border-box
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -41,16 +44,19 @@ table
   border-collapse: collapse
   border-spacing: 0
 
-/* custom */
-
-a
-  color: #7e8c8d
-  -webkit-backface-visibility: hidden
-  text-decoration: none
-
 li
   list-style: none
 
 body
   -webkit-text-size-adjust: none
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+
+a
+  text-decoration: none
+
+::-webkit-scrollbar
+  display: none
+
+input
+  border: 0px
+  outline: none
