--- a/src/assets/stylus/variable.styl
+++ b/src/assets/stylus/variable.styl
@@ -1,20 +1,17 @@
 // 颜色定义规范
-$color-background = #fff
-$color-background-d = rgba(255, 255, 255, 0.3)
-$color-highlight-background = #333
-$color-dialog-background = #666
-$color-theme = #ffcd32
-$color-theme-d = rgba(255, 205, 49, 0.5)
-$color-sub-theme = #d93f30
-$color-text = #000
-$color-text-d = rgba(0, 0, 0, 0.3)
-$color-text-l = rgba(0, 0, 0, 0.5)
-$color-text-ll = rgba(0, 0, 0, 0.8)
+$color-background-white = #fff
+$color-background-pink = #D8316C
+$color-background-black = #070E13
+$color-background-gray = #B5B8BB
 
-//字体定义规范
-$font-size-small-s = 10px
-$font-size-small = 12px
-$font-size-medium = 14px
-$font-size-medium-x = 16px
-$font-size-large = 18px
-$font-size-large-x = 22px
+$color-text-white = #ffffff
+$color-text-pink = #D8316C
+$color-text-black = #272B2C
+$color-text-gray = #B5B8BB
+
+// 字体定义规范
+$font-size-small = 14px
+$font-size-medium = 16px
+$font-size-medium-x = 17px
+$font-size-large = 24px
+$font-size-large-x = 28px
